--- a/posts/cgt/1.markdown
+++ b/posts/cgt/1.markdown
@@ -4,6 +4,7 @@ kochtitle: Part 1 - Games 101
 goto: /cgt.html
 katex: on
 extracss: cgt
+next: /cgt/2.html
 ---
 
 -----------
@@ -16,6 +17,8 @@ extracss: cgt
 Combinatorial Game Theory, as you might expect, concerns itself with the studies of games. In particular, it focuses on a class of games known as **combinatorial** games. A game is a **combinatorial game** if it satisfies all of the following properties:
 
 * The game has exactly two players.
+* The game has some number of **positions**, which can be moved from by a player to other positions.
+* The two players move in sequence.
 * The game has no randomness.
 * Both players have complete information about the game state.
 * A player loses if they are unable to move (this is called the **normal play condition**)
@@ -33,11 +36,14 @@ As for examples of combinatorial games, we will see a handful throughout this se
 
 Before we get into the rules of Hackenbush, we need to introduce our players. Since several games will be covered and it will help to have consistent names across all games, allow me to introduce you to <span class="lazuli">Lazuli</span> and <span class="ruby">Ruby</span>:
 
-<center>
-    <img src="/resources/cgt/1/lazuliandruby.png" width="300px" height="auto"></img>
-    <br>
-    Figure 1.1: Lazuli and Ruby *(I am many things but an artist is not one of them.)*
-</center>
+<figure>
+    <center>
+    <img src="/resources/cgt/1/lazuliandruby.png" width="auto" height="300px"/>
+    <figcaption>
+        Figure 1.1: Lazuli and Ruby *(I am many things but an artist is not one of them.)*
+    </figcaption>
+    </center>
+</figure>
 
 Whenever I show some diagram of a position in a game, if possible, the various parts of the game will be color-coded to show whether they're "associated" with Lazuli or with Ruby. Sometimes the actual game as described in *Winning Ways* or elsewhere won't have this direct association to the players, instead some more arbitrary one, but in this series things will be as color-coded as possible.
 
@@ -45,11 +51,12 @@ On top of that, in the future when we get rigorous, you'll find that the L and R
 
 ## The Rules of Hackenbush
 
-<center>
-    <img src="/resources/cgt/1/samplehackenpos.png" width="500px" height="auto"></img>
-    <br>
-    Figure 1.2: A Completely Inconspicuous Example of a Hackenbush Position
-</center>    
+<figure><center>
+    <img src="/resources/cgt/1/example.svg" width="50%" height="auto"/>
+    <figcaption>
+        Figure 1.2: A Completely Inconspicuous Example of a Hackenbush Position
+    <figcaption>
+</center></figure>    
 
 Hackenbush is a game of branches. A position in Hackenbush is composed of a collection of branches which are either connected to some other branch or to the ground. On each player's turn, they must remove one branch of their color (that is, Lazuli removes their blue branches and Ruby removes their red branches). If, after this cut, a branch is left unconnected to the ground, it too is removed. For example, in Figure 1.2, if it was Ruby's turn and they elected to cut the rightmost red branch, that blue branch on the far right would also be removed. As this is a combinatorial game, whoever finds themself unable to move loses.
 
@@ -57,19 +64,21 @@ Hackenbush is a game of branches. A position in Hackenbush is composed of a coll
 
 What we would like to do throughout this series is look at a position and determine whether Lazuli or Ruby has a winning strategy from that position. First, we will look at some very simple positions:
 
-<center>
-    <img src="/resources/cgt/1/simplestpos.png" width="500px" height="auto"></img>
-    <br>
-    Figure 1.3: The Simplest Possible Hackenbush Position
-</center>  
+<figure><center>
+    <img src="/resources/cgt/1/simplestpos.png" width="50%" height="auto"/>
+    <figcaption>
+        Figure 1.3: The Simplest Possible Hackenbush Position
+    </figcaption>
+</center></figure>
 
 In this position, there is nothing. Lazuli has no moves, and Ruby is also without any moves. So, whoever has the misfortune of holding the current turn will immediately lose. Or, in other words, the winner in this position is **whoever moves second**. This will be important later. Now, for the second simplest Hackenbush position:
 
-<center>
-    <img src="/resources/cgt/1/onebranch.png" width="300px" height="auto"></img>
-    <br>
-    Figure 1.4: The Second Simplest Possible Hackenbush Position
-</center>  
+<figure><center>
+    <img src="/resources/cgt/1/one.svg" width="12.5%" height="auto"/>
+    <figcaption>
+        Figure 1.4: The Second Simplest Possible Hackenbush Position
+    </figcaption>
+</center></figure>
 
 In this position, Lazuli has a single blue branch. If Ruby starts here, they will immediately lose. However, if Lazuli starts, they can cut their single branch and force Ruby into the empty position, whereupon Ruby loses. Lazuli wins **no matter who goes first**.
 
@@ -81,11 +90,12 @@ Furthermore, if we wanted to, we could continue to stack branches of the same co
 
 So, what would happen if we do this?
 
-<center>
-    <img src="/resources/cgt/1/twobranches.png" width="300px" height="auto"></img>
-    <br>
-    Figure 1.5: Finally, a Position With Both Colors
-</center>  
+<figure><center>
+    <img src="/resources/cgt/1/oneminusone.svg" width="25%" height="auto"/>
+    <figcaption>
+        Figure 1.5: Finally, a Position With Both Colors
+    </figcaption>
+</center></figure>
 
 If we play this out, we find that whoever moves first must cut their branch, after which the second player will cut theirs, leaving the first player without any moves. Whoever moves first loses, just like in the empty position. What is the value of this position?
 
@@ -119,17 +129,16 @@ But first, what does $-x$ look like in general? Suppose we had some position tha
 
 Now for the Argument. To show this, we'll take our sample position from Figure 1.2 and combine it with its negative:
 
-<center>
-    <img src="/resources/cgt/1/mutualloss.png" width="600px" height="auto"></img>
-    <br>
-    Figure 1.6: Mutual Loss
-</center>  
+<figure>
+    <img src="/resources/cgt/1/tweedle.svg" width="100%" height="auto"/>
+    <center><figcaption>Figure 1.6: Mutual Loss</figcaption></center>
+</figure>  
 
 Suppose it's Lazuli's turn. They decide to cut one of the blue branches in the left half. If the Tweedledee and Tweedledum Argument is true, this entire position should have a value of $0$. How should Ruby respond, then, to ensure victory? Since the right half of the position is the negative of the left, whatever move Lazuli made in the left half has a corresponding move avaliable to Ruby in the right half. Ruby can then make this move. If Ruby simply continues this process, always "copying" whatever move Lazuli does, they will never be left moveless. This means that they cannot lose, and since the game must end, Lazuli will eventually run out of moves. This hands the victory to Ruby, the second player. By exactly the same logic, Lazuli wins when Ruby goes first. This means that the second player always wins, forcing the value of the position to $0$.
 
 ## Summary of Part 1
 
-* A game is a **combinatorial game** if it has two players, if has no randomness or hidden information, if a player loses when unable to move, and (for now) if the game will eventually end.
+* A game is a **combinatorial game** if it has two players, if has no randomness or hidden information, if a player loses when unable to move, if the two players move sequentially from one position to another, and (for now) if the game will eventually end.
 * Positions in combinatorial games can be given **values** which tell us who will win that position, and by how much.
 * If a position has a positive value, Lazuli always wins it. If it has a negative value, Ruby always wins it. If it has a value of zero, whoever goes second will win.
 * One way of finding the value a Hackenbush position is splitting it up into individual components and adding up their values.
