--- a/posts/cgt/1.markdown
+++ b/posts/cgt/1.markdown
@@ -56,7 +56,7 @@ On top of that, in the future when we get rigorous, you'll find that the L and R
     <figcaption>
         Figure 1.2: A Completely Inconspicuous Example of a Hackenbush Position
     <figcaption>
-</center></figure>    
+</center></figure>
 
 Hackenbush is a game of branches. A position in Hackenbush is composed of a collection of branches which are either connected to some other branch or to the ground. On each player's turn, they must remove one branch of their color (that is, Lazuli removes their blue branches and Ruby removes their red branches). If, after this cut, a branch is left unconnected to the ground, it too is removed. For example, in Figure 1.2, if it was Ruby's turn and they elected to cut the rightmost red branch, that blue branch on the far right would also be removed. As this is a combinatorial game, whoever finds themself unable to move loses.
 
@@ -144,6 +144,7 @@ Suppose it's Lazuli's turn. They decide to cut one of the blue branches in the l
 * One way of finding the value a Hackenbush position is splitting it up into individual components and adding up their values.
 * The Tweedledee and Tweedledum Argument shows that combining a position with its negative will produce a zero position.
 
-## In Part 2, we will:
+## In Part 2, we will
+
 * Invent fractions (though only some of them).
 * Encounter our first bit of weirdness.
